# meltem-aspria

./: .gitignore  README.md  config.yaml  kursbuchung.md  pyproject.toml
build_backend/: aspria_build.py
docs/agents/: domain.md  issue-tracker.md
ralph/: afk.sh  once.sh  prompt.md
src/aspria_booker/: __init__.py  artifacts.py  browser_adapter.py  cli.py  config.py  email.py  history.py  jobs.py  rules.py  schedule.py  session.py
src/playwright/: __init__.pyi  sync_api.pyi
tests/: test_artifacts.py  test_browser_adapter.py  test_cli.py  test_config_and_safety.py  test_email_notifications.py  test_history.py  test_jobs.py  test_readme_runbook.py  test_rule_engine.py  test_schedule.py  test_session.py
