[build-system]
requires = []
build-backend = "aspria_build"
backend-path = ["build_backend"]

[project]
name = "aspria-booker"
version = "0.1.0"
description = "Private Aspria Hannover Maschsee course booking CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.59.0",
]

[project.scripts]
aspria-booker = "aspria_booker.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
